cli/tests/snapshots/arguments__subvolume_set_default.snap
---
source: cli/tests/arguments.rs
expression: "parse(&[\"btrfs\", \"subvolume\", \"set-default\", \"256\", \"/mnt\"])"
---
Arguments {
    global: GlobalOptions {
        verbose: 0,
        quiet: false,
        dry_run: false,
        log: None,
        format: None,
    },
    command: Subvolume(
        SubvolumeCommand {
            subcommand: SetDefault(
                SubvolumeSetDefaultCommand {
                    subvol_or_id: "256",
                    path: Some(
                        "/mnt",
                    ),
                },
            ),
        },
    ),
}
