cli/tests/snapshots/arguments__subvolume_show.snap
---
source: cli/tests/arguments.rs
expression: "parse(&[\"btrfs\", \"subvolume\", \"show\", \"/mnt/subvol\"])"
---
Arguments {
    global: GlobalOptions {
        verbose: 0,
        quiet: false,
        dry_run: false,
        log: None,
        format: None,
    },
    command: Subvolume(
        SubvolumeCommand {
            subcommand: Show(
                SubvolumeShowCommand {
                    rootid: None,
                    uuid: None,
                    path: "/mnt/subvol",
                },
            ),
        },
    ),
}
