cli/tests/snapshots/arguments__subvolume_show_rootid.snap
---
source: cli/tests/arguments.rs
expression: "parse(&[\"btrfs\", \"subvolume\", \"show\", \"-r\", \"256\", \"/mnt\"])"
---
Arguments {
    global: GlobalOptions {
        verbose: 0,
        quiet: false,
        dry_run: false,
        log: None,
        format: None,
    },
    command: Subvolume(
        SubvolumeCommand {
            subcommand: Show(
                SubvolumeShowCommand {
                    rootid: Some(
                        256,
                    ),
                    uuid: None,
                    path: "/mnt",
                },
            ),
        },
    ),
}
