cli/tests/snapshots/arguments__subvolume_show_uuid.snap
---
source: cli/tests/arguments.rs
expression: "parse(&[\"btrfs\", \"subvolume\", \"show\", \"-u\",\n\"550e8400-e29b-41d4-a716-446655440000\", \"/mnt\"])"
---
Arguments {
    global: GlobalOptions {
        verbose: 0,
        quiet: false,
        dry_run: false,
        log: None,
        format: None,
    },
    command: Subvolume(
        SubvolumeCommand {
            subcommand: Show(
                SubvolumeShowCommand {
                    rootid: None,
                    uuid: Some(
                        ParsedUuid(
                            550e8400-e29b-41d4-a716-446655440000,
                        ),
                    ),
                    path: "/mnt",
                },
            ),
        },
    ),
}
