cli/tests/snapshots/arguments__subvolume_snapshot_missing_dest.snap
---
source: cli/tests/arguments.rs
expression: "parse_err(&[\"btrfs\", \"subvolume\", \"snapshot\", \"/mnt/src\"])"
---
error: the following required arguments were not provided:
  <DEST>
