cli/tests/snapshots/arguments__subvolume_snapshot_qgroup.snap
---
source: cli/tests/arguments.rs
expression: "parse(&[\"btrfs\", \"subvolume\", \"snapshot\", \"-i\", \"0/100\", \"/mnt/src\",\n\"/mnt/dst\"])"
---
Arguments {
    global: GlobalOptions {
        verbose: 0,
        quiet: false,
        dry_run: false,
        log: None,
        format: None,
    },
    command: Subvolume(
        SubvolumeCommand {
            subcommand: Snapshot(
                SubvolumeSnapshotCommand {
                    readonly: false,
                    qgroups: [
                        "0/100",
                    ],
                    source: "/mnt/src",
                    dest: "/mnt/dst",
                },
            ),
        },
    ),
}
