cli/tests/snapshots/arguments__subvolume_snapshot_readonly_qgroup.snap
---
source: cli/tests/arguments.rs
expression: "parse(&[\"btrfs\", \"subvolume\", \"snapshot\", \"-r\", \"-i\", \"0/100\", \"-i\", \"1/0\",\n\"/mnt/src\", \"/mnt/dst\"])"
---
Arguments {
    global: GlobalOptions {
        verbose: 0,
        quiet: false,
        dry_run: false,
        log: None,
        format: None,
    },
    command: Subvolume(
        SubvolumeCommand {
            subcommand: Snapshot(
                SubvolumeSnapshotCommand {
                    readonly: true,
                    qgroups: [
                        "0/100",
                        "1/0",
                    ],
                    source: "/mnt/src",
                    dest: "/mnt/dst",
                },
            ),
        },
    ),
}
