cli/tests/snapshots/arguments__subvolume_sync.snap
---
source: cli/tests/arguments.rs
expression: "parse(&[\"btrfs\", \"subvolume\", \"sync\", \"/mnt\"])"
---
Arguments {
    global: GlobalOptions {
        verbose: false,
        quiet: false,
        dry_run: false,
        log: None,
        format: None,
    },
    command: Subvolume(
        SubvolumeCommand {
            subcommand: Sync(
                SubvolumeSyncCommand {
                    path: "/mnt",
                    subvolids: [],
                    sleep: None,
                },
            ),
        },
    ),
}
