cli/tests/snapshots/arguments__subvolume_sync_with_ids.snap
---
source: cli/tests/arguments.rs
expression: "parse(&[\"btrfs\", \"subvolume\", \"sync\", \"/mnt\", \"256\", \"257\"])"
---
Arguments {
    global: GlobalOptions {
        verbose: 0,
        quiet: false,
        dry_run: false,
        log: None,
        format: None,
    },
    command: Subvolume(
        SubvolumeCommand {
            subcommand: Sync(
                SubvolumeSyncCommand {
                    path: "/mnt",
                    subvolids: [
                        256,
                        257,
                    ],
                    sleep: None,
                },
            ),
        },
    ),
}
